Fix layout issues

--- a/seatuationApp/imports/ui/css/Library.css
+++ b/seatuationApp/imports/ui/css/Library.css
@@ -29,6 +29,7 @@
 
 #display{
 	padding-right: 0;
+	padding-left: 0;
 }
 
 #sidebar{
