--- a/seatuationApp/imports/ui/css/Sidebar.css
+++ b/seatuationApp/imports/ui/css/Sidebar.css
@@ -51,9 +51,10 @@
 }
 
 .legendTitle{
-	font-size: 2vw;
+	font-size: 1.3vw;
 	margin-top: 0px;
-	margin-bottom: 1vw;
+	margin-bottom: 0.5vw;
+	font-weight: bold;
 }
 
 .legendSub{
@@ -71,4 +72,8 @@ input[type=checkbox]{
 
 .responsiveText{
 	font-size: 1vw;
+}
+
+.sideBar{
+	padding-right: 0;
 }
